fix top spacing for user pages

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -123,7 +123,7 @@ div {
 }
 
 .content-wrap {
-  margin-top: 170px;
+  margin-top: 160px;
   @media screen and (max-width: 767px) {
     margin-top: 320px;
   }
